@@ -56,7 +56,7 @@
             function(path, id, title) {
               kupu.getTool('linktool').createLink(path);
             }, '${container/absolute_url}',
-            '', true);;
+            '', true, '');;
         }
       "></script>
 
@@ -138,7 +138,7 @@
                 imgtool.updateState(selNode);
             };
           }, '${folder_context/absolute_url}',
-          'Silva Image', true);;
+          'Silva Image', true, '');;
       }
     "></script>
 
