@@ -82,7 +82,7 @@
                                       )[0].value = path;;
                                     },
                                     '${asset_context/absolute_url}',
-                                    'Container', true)"
+                                    'Container', true, '')"
           i18n:attributes="value;title"
           /><span class="warning"
             tal:condition="field/is_required">*</span>
