@@ -82,7 +82,7 @@
                                         )[0].value = path;;
                                       },
                                       '${asset_context/absolute_url}',
-                                      'Content', true)"
+                                      'Content', true, '${content_url}')"
             i18n:attributes="value;title"
             /><span class="warning">*</span>
         </td>
