@@ -11,7 +11,7 @@ Silva changes
 
     Ported from 2.0 branch
 
-     - Adding Groups, Virtual Groups and IPGroups was broken.
+      - Adding Groups, Virtual Groups and IPGroups was broken.
 
     Ported from 1.6 branch
 
@@ -19,6 +19,9 @@ Silva changes
         previously. Unfortunately it turned out that at least 'home'
         was reserved for a good reason, so to be sure re-reserved
         these ids, except for 'search'.
+
+      - In the lookupwindowfield, a previously selected value is now
+        shown selected.
 
   Silva 2.0.1
 
